# fib-py-with-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.py
src/: class_module.rs  lib.rs  numpy_model.rs
src/class_module/: fib_processor.rs
src/fib_calcs/: fib_number.rs  fib_numbers.rs
src/interface/: config.rs  object.rs
tiruka_fib_rs/: __init__.py  config_number_command.py  counter.py  fib_number_adapter.py  fib_number_command.py  numpy_interface.py  object_interface.py  singleton.py
