[package]
name = "tiruka_fib_rs"
version = "0.1.0"
edition = "2021"
authors = ["Tiruka"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[lib]
name = "tiruka_fib_rs"
crate-type = ["rlib", "cdylib"]
